@@ -1,3 +1,9 @@
+2001-10-01  Jochen Wiedmann <joe@ispsoft.de> (0.2016)
+
+	* lib/RPC/PlServer/Comm.pm (Write): Added
+	  handling of $\. Brian McCauley
+	  <b.a.mccauley@bham.ac.uk>
+	
 2001-03-26  Jochen Wiedmann <joe@ispsoft.de> (0.2014)
 
 	* lib/RPC/PlClient.pm: Documentation fixes
